--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ngneat/falso": "^6.3.1",
     "chart.js": "^4.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
